[package]
name = "oobleck"
version = "0.0.1"
edition = "2021"

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
dashmap = { version = "5.5", features = ["rayon"] }
rayon = "1.8" 
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.9"
log = "0.4"
env_logger = "0.10"

[lib]
name = "planner"
crate-type = ["cdylib"]
path = "oobleck/rust/lib.rs"

[build-dependencies]
pyo3-build-config = "0.20.0"