[tool.poetry]
name = "oobleck"
version = "0.1.0"
description = "Resilient Distributed Training Framework"
authors = ["Insu Jang <insujang@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Assume all are installed by conda


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
